--- a/source/terminologies.html
+++ b/source/terminologies.html
@@ -812,8 +812,8 @@ may bind the element to any value set they choose.
 <p>
 A binding strength of 'required' or 'extensible' does not indicate that ALL of the codes in the bound value set 
 will be supported. It constrains the set of codes that are allowed to be shared. If systems flag an element 
-as <a href="obligations.html">mustSupport</a>, the <a href="[%extensions-location%]StructureDefinition-elementdefinition-minValueSet.html">minimumValueSet 
-extension</a> SHOULD be used to identify a specific subset (possibly the full set) of the bound codes 
+as <a href="obligations.html">mustSupport</a>, an additional binding of purpose <code>minimum</code>
+SHOULD be used to identify a specific subset (possibly the full set) of the bound codes 
 that must be supported by implementers.
 </p>
 <p>
@@ -862,7 +862,7 @@ may be sealed by defining a simple list of enumerated codes, or it may include
 codes by their properties, along with a non-version specific reference to an
 underlying code system, in which case the list of valid concepts may change over time.
 </li>
-<li><a href="[%extensions-location%]StructureDefinition-elementdefinition-minValueSet.html">Extension minValueSet</a> may be used to define the minimum value set that is required for conformance. </li>
+<li>An additional binding with a purpose of <code>minimum</code> may be used to define the minimum value set that is required for conformance. </li>
 </ul>
 <!--
   <a name="strings"></a>
