--- a/source/fhirpath.html
+++ b/source/fhirpath.html
@@ -264,15 +264,16 @@ In addition to the general purpose functions below, additional functions functio
   <li><a href="questionnaireresponse.html#fhirpath">QuestionnaireResponse</a></li>
 </ul>
 
-<p><b>extension(url : string) : collection</b><a name="fn-extension"> </a></p>
+<a name="fn-extension"> </a>
+<h5><b>extension(url : string) : collection</b></h5>
 <p>Will filter the input collection for items named "extension" with the given url. 
   This is a syntactical shortcut for <code>.extension.where(url = string)</code>, 
   but is simpler to write. If the input collection is empty or the url is empty, 
   the return value will be an empty collection.</p>
 
 <hr/>
-
-<p><b>hasValue() : Boolean</b><a name="fn-hasValue"> </a></p>
+<a name="fn-hasValue"> </a>
+<h5><b>hasValue() : Boolean</b></h5>
 <p>If the input collection contains a single value which is a FHIR primitive, then will
   return true if the single value is a primitive value (e.g. as opposed to not having a
   value and just having extensions) and false if not. If the input collection isn't a
@@ -286,7 +287,8 @@ In addition to the general purpose functions below, additional functions functio
 </blockquote>
 
 <hr/>
-<p><b>toString() : string</b><a name="fn-toString"> </a></p>
+<a name="fn-toString"> </a>
+<h5><b>toString() : string</b></h5>
 <p>If the input collection contains a single item, this function will return a single String if the type 
   is a primitive, and it has a value (e.g. if <code>hsaValue() = true</code>), and the primitive type 
   has a System type for which <a href="https://hl7.org/fhirpath/N1/#tostring-string">toString() is defined</a>.
@@ -294,14 +296,14 @@ In addition to the general purpose functions below, additional functions functio
 </p>
 
 <hr/>
-
-<p><b>getValue() : System.[type]</b><a name="fn-getValue"> </a></p>
+<a name="fn-getValue"> </a>
+<h5><b>getValue() : System.[type]</b></h5>
 <p>Return the underlying system value for the FHIR primitive if the input collection contains a single value which is a FHIR primitive, 
   and it has a primitive value (see discussion for hasValue()). Otherwise, the return value is empty.</p>
 
   <hr/>
-
-<p><b>resolve() : collection</b><a name="fn-resolve"> </a></p>
+<a name="fn-resolve"> </a>
+<h5><b>resolve() : collection</b></h5>
 <p>For each item in the collection, if it is a string that is a <a href="datatypes.html#uri">uri</a>
    (or <a href="datatypes.html#canonical">canonical</a> or <a href="datatypes.html#url">url</a>), locate the 
    target of the reference, and add it to the resulting collection. If the item does not resolve to a resource, 
@@ -310,8 +312,8 @@ In addition to the general purpose functions below, additional functions functio
   If the input is empty, the return value will be an empty collection.</p>
 
   <hr/>
-  
-<p><b>ofType(type : type specifier) : collection</b><a name="fn-ofType2"> </a></p>
+<a name="fn-ofType2"> </a><a name="fn-ofType"> </a>
+<h5><b>ofType(type : type specifier) : collection</b></h5>
 <p>Returns a collection that contains all items in the input collection that are of the given type or a subclass thereof.
   This is as defined as in the base FHIRPath specification, but implementers should be aware that in FHIR, 
   only concrete core types are allowed as an argument. All primitives are considered to be independent 
@@ -319,15 +321,15 @@ In addition to the general purpose functions below, additional functions functio
   not allowed, so to select <code>SimpleQuantity</code> one would pass <code>Quantity</code> as an argument.</p>
 
 <hr/>
-
-<p><b>elementDefinition() : collection</b><a name="fn-elementDefinition"> </a></p>
+<a name="fn-elementDefinition"> </a>
+<h5><b>elementDefinition() : collection</b></h5>
 <p>Returns the FHIR element definition information for each element in the input collection. If the 
   input collection is empty, the return value will be an empty collection.
 </p>
 
 <hr/>
-
-<p><b>slice(structure : string, name : string) : collection</b><a name="fn-slice"> </a></p>
+<a name="fn-slice"> </a>
+<h5><b>slice(structure : string, name : string) : collection</b></h5>
 <p>
   Returns the given slice as defined in the given structure definition. The 
   structure argument is a uri that resolves to the structure definition, and 
@@ -338,22 +340,22 @@ In addition to the general purpose functions below, additional functions functio
 <p>For every element in the input collection, if the resolved slice is present on the element, it will be returned. If the slice does not match any element in the input collection, or if the input collection is empty, the return value will be an empty collection.</p>
 
 <hr/>
-
-<p><b>checkModifiers(modifier : string) : collection</b><a name="fn-checkModifiers"> </a></p>
+<a name="fn-checkModifiers"> </a>
+<h5><b>checkModifiers(modifier : string) : collection</b></h5>
 
 <p>For each element in the input collection, verifies that there are no modifying extensions defined other than the ones given by the <code>modifier</code> argument (comma-separated string). 
   If the check passes, the input collection is returned. Otherwise, an error is thrown, including if modifier is empty.</p>
 
   <hr/>
-
-<p><b>conformsTo(structure : string) : Boolean</b><a name="fn-conformsTo"> </a></p>
+<a name="fn-conformsTo"> </a>
+<h5><b>conformsTo(structure : string) : Boolean</b></h5>
 <p>Returns <code>true</code> if the single input element conforms to the profile specified by the <code>structure</code> argument, 
   and false otherwise. If the input is not a single item, the structure is empty, or the structure cannot be resolved to a valid profile, 
   the return value is empty.</p>
 
   <hr/>
-
-<p><b>memberOf(valueset : string) : Boolean</b><a name="fn-memberOf"> </a></p>
+<a name="fn-memberOf"> </a>
+<h5><b>memberOf(valueset : string) : Boolean</b></h5>
 
 <p>When invoked on a single code-valued element, returns true if the code is a member of the given valueset.
 When invoked on a single concept-valued element, returns true if any code in the concept is a member of the given valueset.
@@ -372,8 +374,8 @@ Observation.component.where(code.memberOf('http://hl7.org/fhir/ValueSet/observat
 <p>This expression returns components that have a code that is a member of the observation-vitalsignresult valueset.</p>
 
 <hr/>
-
-<p><b>subsumes(code : Coding | CodeableConcept) : Boolean</b><a name="fn-subsumes"> </a></p>
+<a name="fn-subsumes"> </a>
+<h5><b>subsumes(code : Coding | CodeableConcept) : Boolean</b></h5>
 
 <p>When invoked on a Coding-valued element and the given code is Coding-valued, returns true if the source code is equivalent to the given code, or if the source code subsumes the given code (i.e. the source code is an ancestor of the given code in a subsumption hierarchy), and false otherwise.</p>
 <p>If the Codings are from different code systems, the relationships between the code systems must be well-defined or the return value is empty.</p>
@@ -382,8 +384,8 @@ Observation.component.where(code.memberOf('http://hl7.org/fhir/ValueSet/observat
 <p>Note that implementations are encouraged to make use of a terminology service to provide this functionality.</p>
 
 <hr/>
-
-<p><b>subsumedBy(code: Coding | CodeableConcept) : Boolean</b><a name="fn-subsumedBy"> </a></p>
+<a name="fn-subsumedBy"> </a>
+<h5><b>subsumedBy(code: Coding | CodeableConcept) : Boolean</b></h5>
 
 <p>When invoked on a Coding-valued element and the given code is Coding-valued, returns true if the source code is equivalent to the given code, or if the source code is subsumed by the given code (i.e. the given code is an ancestor of the source code in a subsumption hierarchy), and false otherwise.</p>
 <p>If the Codings are from different code systems, the relationships between the code systems must be well-defined or a run-time error is thrown.</p>
@@ -392,8 +394,8 @@ Observation.component.where(code.memberOf('http://hl7.org/fhir/ValueSet/observat
 <p>Note that implementations are encouraged to make use of a terminology service to provide this functionality.</p>
 
 <hr/>
-
-<p><b>htmlChecks : Boolean</b><a name="fn-htmlChecks"> </a></p>
+<a name="fn-htmlChecks"> </a>
+<h5><b>htmlChecks : Boolean</b></h5>
 
 <p>When invoked on a single <a href="narrative.html#xhtml">xhtml</a> element returns true if the <a href="narrative.html#rules">rules around
 HTML usage</a> are met, and false if they are not. The return value is empty on any other kind of element, or a collection of 
@@ -401,8 +403,8 @@ xhtml elements.
 </p>
 
 <hr/>
-
-<p><b>lowBoundary : T</b><a name="fn-lowBoundary"> </a></p>
+<a name="fn-lowBoundary"> </a>
+<h5><b>lowBoundary : T</b></h5>
 
 <p>
 This function returns the lowest possible value in the natural range expressed by the type it is invoked on. 
@@ -421,8 +423,8 @@ This function is intended to be added to the core FHIRPath specification in a fu
 
 
 <hr/>
-
-<p><b>highBoundary : T</b><a name="fn-highBoundary"> </a></p>
+<a name="fn-highBoundary"> </a>
+<h5><b>highBoundary : T</b></h5>
 
 <p>
 This function returns the lowest possible value in the natural range expressed by the type it is invoked on. 
@@ -441,8 +443,8 @@ This function is intended to be added to the core FHIRPath specification in a fu
 
 
 <hr/>
-
-<p><b>comparable(quantity) : boolean</b><a name="fn-comparable"> </a></p>
+<a name="fn-comparable"> </a>
+<h5><b>comparable(quantity) : boolean</b></h5>
 
 <p>
 This function returns true if the engine executing the FHIRPath statement can compare the singleton Quantity
@@ -453,9 +455,10 @@ system is recognized by the FHIRPath implementation and the codes are comparable
 <p>
 This function is intended to be added to the core FHIRPath specification in a future version.
 </p>
-<hr/>
 
-<p><b>weight() : decimal</b><a name="fn-weight"> </a></p>
+<hr/>
+<a name="fn-weight"> </a>
+<h5><b>weight() : decimal</b></h5>
 
 This functions returns the ordinal value for an element. This may be based on an <a href="[%extensions-location%]StructureDefinition-itemWeight.html">itemWeight extension</a> defined on an element such as QuestionnaireResponse answer, or it may be based on the <a href="codesystem.html#defined-props">weight property</a> defined on a code.  In some cases, this may require looking across resources.  For example, QuestionnaireResponse.item.where(linkId='123').answer.first().weight() may need to find the corresponding item in the Questionnaire and then look up the coding specified in 'answer' with the corresponding answerOption in Questionnaire.item with the same linkId.  If no weight is defined for the context element, the return value is empty. If the FHIRPath engine is unable to resolve the corresponding value set, code system or questionnaire options, it SHOULD cause the expression to fail.
 
