--- a/source/terminologies-systems.html
+++ b/source/terminologies-systems.html
@@ -22,10 +22,9 @@ For URIs specified here for code systems defined as part of FHIR, they SHALL be 
 here, the correct URI may be determined by working through the following list, in order:
 </p>
 <ul>
- <li>the HL7 OID Registry</li>
- <li>the documentation associated with the code system</li>
- <li>consulting the owner of the code system</li>
- <li>asking on the HL7 vocabulary mailing list</li>
+ <li><a href="https://terminology.hl7.org/">HL7 Terminology's (THO) most recent published version</a></li>
+ <li><a href="https://build.fhir.org/ig/HL7/UTG/"></a>THO continuous integration build</a></li>
+ <li>Ask on the HL7 Terminology Services Management Group (TSMG) mailing list</li>
 </ul>
 
 <p>
