FHIR-50922 CodeSystem supplements should be allowed to reference private codes

--- a/source/terminologies-systems.html
+++ b/source/terminologies-systems.html
@@ -23,7 +23,7 @@ here, the correct URI may be determined by working through the following list, i
 </p>
 <ul>
  <li><a href="https://terminology.hl7.org/">HL7 Terminology's (THO) most recent published version</a></li>
- <li><a href="https://build.fhir.org/ig/HL7/UTG/"></a>THO continuous integration build</a></li>
+ <li><a href="https://build.fhir.org/ig/HL7/UTG/">THO continuous integration build</a></li>
  <li>Ask on the HL7 Terminology Services Management Group (TSMG) mailing list</li>
 </ul>
 
