QA: Typo on hasValue function in toString

--- a/source/fhirpath.html
+++ b/source/fhirpath.html
@@ -300,7 +300,7 @@ Patient.active.hasValue()
 <a name="fn-toString"> </a>
 <h5><b>toString() : string</b></h5>
 <p>If the input collection contains a single item, this function will return a single String if the type 
-  is a primitive, and it has a value (e.g. if <code>hsaValue() = true</code>), and the primitive type 
+  is a primitive, and it has a value (e.g. if <code>hasValue() = true</code>), and the primitive type 
   has a System type for which <a href="https://hl7.org/fhirpath/N1/#tostring-string">toString() is defined</a>.
   Otherwise the result is an empty collection.
 </p>
